# xccmeta

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
docs/: README.md  api-reference.md  architecture.md  compile-args.md  examples.md  filter.md  generator.md  getting-started.md  import.md  installation.md  module-base.md  module-compile-args.md  module-filter.md  module-generator.md  module-import.md  module-node.md  module-parser.md  module-preprocess.md  module-source.md  module-tags.md  module-type-info.md  module-warnings.md  node.md  parser.md  patterns.md  preprocess.md  quickstart.md  source-location.md  tags.md  type-info.md  warnings.md
examples/: ast_output.cpp  binary_read_write.cpp  enum_to_string.cpp  struct_print.cpp
include/: xccmeta.hpp  xccmeta_base.hpp  xccmeta_compile_args.hpp  xccmeta_import.hpp  xccmeta_node.hpp  xccmeta_parser.hpp  xccmeta_preprocess.hpp  xccmeta_tags.hpp  xccmeta_type_info.hpp
include/xccmeta/: xccmeta_base.hpp  xccmeta_compile_args.hpp  xccmeta_filter.hpp  xccmeta_generator.hpp  xccmeta_import.hpp  xccmeta_node.hpp  xccmeta_parser.hpp  xccmeta_preprocess.hpp  xccmeta_source.hpp  xccmeta_tags.hpp  xccmeta_type_info.hpp  xccmeta_warnings.hpp
src/: libclang_include.h  xccmeta.cpp  xccmeta_compile_args.cpp  xccmeta_filter.cpp  xccmeta_generator.cpp  xccmeta_import.cpp  xccmeta_node.cpp  xccmeta_parser.cpp  xccmeta_preprocess.cpp  xccmeta_source.cpp  xccmeta_tags.cpp  xccmeta_type_info.cpp  xccmeta_warnings.cpp
tests/: testing.cpp  xccmeta_filter_test.cpp  xccmeta_generator_test.cpp  xccmeta_import_test.cpp  xccmeta_node_test.cpp  xccmeta_parser_test.cpp  xccmeta_preprocess_test.cpp  xccmeta_source_test.cpp  xccmeta_tags_test.cpp  xccmeta_warnings_test.cpp
